#
#	$Id: CMakeLists.txt 380 2016-08-14 06:42:31Z fwobbe $
#

# Add subdirectories
add_subdirectory (ALOS_preproc)
add_subdirectory (S1A_preproc)
add_subdirectory (CSK_preproc)
add_subdirectory (TSX_preproc)
add_subdirectory (RS2_preproc)
add_subdirectory (ENVI_preproc)
add_subdirectory (ERS_preproc)

# vim: textwidth=78 noexpandtab tabstop=2 softtabstop=2 shiftwidth=2
